@@ -1,3 +1,7 @@
+Thu Mar 18 15:29:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* thread.c (ruby_vm_spawn): tentative implementation.
+
 Thu Mar 18 14:54:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (ruby_vmptr_start): renamed from ruby_vm_start.
